--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "captchapng2": "^1.0.3",
+    "forever-monitor": "^1.7.1",
     "koa": "^2.7.0",
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.2.1",
