--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "art-template": "^4.13.2",
+    "bluebird": "^3.5.4",
     "captchapng2": "^1.0.3",
     "forever-monitor": "^1.7.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.2.1",
